wrap position fixed

--- a/stylehomepage.css
+++ b/stylehomepage.css
@@ -424,7 +424,7 @@ body{
     }
 
     .wrap{
-        top: 100px;
+        top: 70px;
     }
 }
 
